--- a/src/views/empleado/agregar.ejs
+++ b/src/views/empleado/agregar.ejs
@@ -39,7 +39,7 @@
       <div class="form-outline">
         <label class="form-label" for="txtRut">Rut</label>
         <input type="text" pattern="\d{1,2}.\d{3}.\d{3}-[\d|kK]{1}" title="Rut inválido" 
-        name="rut" id="txtRut" class="form-control" onkeyup="formatRut(this);"/>
+        name="rut" id="txtRut" class="form-control" onkeyup="formatRut(this);" required/>
       </div>
     </div>
     <div class="col-md-6 col-lg-4 mb-4">
