--- a/src/views/empleado/agregar.ejs
+++ b/src/views/empleado/agregar.ejs
@@ -15,7 +15,7 @@
     <div class="col-md-6 mb-4">
       <div class="form-outline">
         <label class="form-label" for="numCod">Código</label>
-        <input type="number" name="codEmpleado" id="numCod" class="form-control" />
+        <input type="number" name="codEmpleado" id="numCod" class="form-control" required/>
       </div>
     </div>
 
@@ -23,13 +23,13 @@
     <div class="col-md-6 mb-4">
       <div class="form-outline">
         <label class="form-label" for="txtNombres">Nombres</label>
-        <input type="text" name="nombres" id="txtNombres" class="form-control" />
+        <input type="text" name="nombres" id="txtNombres" class="form-control" required/>
       </div>
     </div>
     <div class="col-md-6 mb-4">
       <div class="form-outline">
         <label class="form-label" for="txtApellidos">Apellidos</label>
-        <input type="text" name="apellidos" id="txtApellidos" class="form-control" />
+        <input type="text" name="apellidos" id="txtApellidos" class="form-control" required/>
       </div>
     </div>
   </div>
@@ -68,7 +68,7 @@
     <div class="col-md-6 col-lg-4 mb-4">
       <div class="form-outline mb-4">
         <label class="form-label" for="passPsw">Contraseña</label>
-        <input type="password" name="psw" id="passPsw" class="form-control" />
+        <input type="password" name="psw" id="passPsw" class="form-control" required/>
       </div>
     </div>
     <div class="col-md-6 col-lg-4 mb-4">
