Fuentes mas grandes, validacion lat y long

--- a/src/public/sass/custom.scss
+++ b/src/public/sass/custom.scss
@@ -11,6 +11,11 @@ body {
   max-height: 500px;
 }
 
+h1.display-4.text-center {
+  font-size: 4rem;
+  font-weight: 400;
+  font-family: 'Lato', sans-serif;
+}
 
 
 
