--- a/src/public/sass/custom.css
+++ b/src/public/sass/custom.css
@@ -6,6 +6,12 @@ body {
   max-height: 500px;
 }
 
+h1.display-4.text-center, .display-4.text-center.h1 {
+  font-size: 4rem;
+  font-weight: 400;
+  font-family: 'Lato', sans-serif;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
