--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -31,14 +31,14 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
           <div class="container container-fluid">
-            <a class="navbar-brand" href="/">Todo Rutas</a>
+            <a class="navbar-brand fs-3" href="/">Todo Rutas</a>
             
             <!-- Toggle button para movil -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
     
-            <div class="collapse navbar-collapse justify-content-end align-center" id="mainNav">
+            <div class="collapse navbar-collapse fs-5 justify-content-end align-center" id="mainNav">
               <ul class="navbar-nav mb-2 mb-lg-0">
                 <!-- Links -->
                 <% if(user) { %>
