--- a/src/views/parque/agregar.ejs
+++ b/src/views/parque/agregar.ejs
@@ -46,11 +46,11 @@
     <div class="row">
       <div class="col-sm-4 col-lg-3 my-1">
         <label for="long" class="form-label">Longitud</label>
-        <input type="number" class="form-control" id="long" step="any" min="-180" max="180" name="long" placeholder="-180 a 180">
+        <input type="number" class="form-control" id="long" step="any" min="-180" max="180" name="long" placeholder="-180 a 180" required>
       </div>
       <div class="col-sm-4 col-lg-3 my-1">
         <label for="lat" class="form-label">Latitud</label>
-        <input type="number" class="form-control" id="lat" step="any" min="-90" max="90" name="lat" placeholder="-180 a 180">
+        <input type="number" class="form-control" id="lat" step="any" min="-90" max="90" name="lat" placeholder="-180 a 180" required>
       </div>
       <!--Location: <input type="text" id="location" style="width: 200px"/>-->
       <div id="map" style="width: 400px; height: 200px;"></div> 
