--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -43,16 +43,7 @@
                 <!-- Links -->
                 <% if(user) { %>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Empleado
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="/empleado/listar">Listar</a></li>
-                      <li><a class="dropdown-item" href="/empleado/agregar">Agregar</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link <%= (title === 'Agregar Parque' || title === 'Lista Parques')?'':'active' %> dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Parque
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -60,19 +51,25 @@
                       <li><a class="dropdown-item" href="/parque/agregar">Agregar</a></li>
                   </ul>
                 </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link <%= (title === 'Agregar Empleado' || title === 'Lista Empleados')?'':'active' %> dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Empleado
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="/empleado/listar">Listar</a></li>
+                      <li><a class="dropdown-item" href="/empleado/agregar">Agregar</a></li>
+                  </ul>
+                </li>
                 <% } %>
                 <li class="nav-item">
-                  <a class="nav-link <%= (title === 'Todo Rutas')?'active':'' %> " aria-current="page" href="/">Inicio</a>
+                  <a class="nav-link <%= (title === 'Parques')?'':'active' %> " aria-current="page" href="/parques">Parques</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link <%= (title === 'Parques')?'active':'' %> " aria-current="page" href="/parques">Parques</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link <%= (title === 'About')?'active':'' %> " aria-current="page" href="/about">Contacto</a>
+                  <a class="nav-link <%= (title === 'About')?'':'active' %> " aria-current="page" href="/about">Contacto</a>
                 </li>
                 <% if(user) { %>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="/empleado/logout">Cerrar Sesión</a>
+                  <a class="nav-link active" aria-current="page" href="/empleado/logout">Cerrar Sesión</a>
                 </li>
                 <% } %>
               </ul>
